S3 syncing, Java linux deps, and Java min version check